force-app/main/default/objects/CMPL123CME__Complaint__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cisgender man/boy (gender corresponds with birth sex)</fullName>
            </value>
            <value>
                <fullName>Cisgender woman/girl (gender corresponds with birth sex)</fullName>
            </value>
            <value>
                <fullName>Transgender man/trans man/female-to-male (FTM)</fullName>
            </value>
            <value>
                <fullName>Transgender woman/trans woman/male-to-female (MTF)</fullName>
            </value>
            <value>
                <fullName>Other gender category</fullName>
                <label>Other gender category: please specify</label>
            </value>
            <value>
                <fullName>Decline to answer</fullName>
            </value>
            <value>
                <fullName>ASKU</fullName>
                <isActive>false</isActive>
                <label>ASKU</label>
            </value>
            <value>
                <fullName>NA</fullName>
                <isActive>false</isActive>
                <label>NA</label>
            </value>
            <value>
                <fullName>NI</fullName>
                <isActive>false</isActive>
                <label>NI</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>