force-app/main/default/objects/CMPL123CME__Complaint__c/fields/OLY_Gender__c.field-meta.xml
<CustomField>
    <fullName>OLY_Gender__c</fullName>
    <label>Sex</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Undifferentiated</fullName>
            </value>
            <value>
                <fullName>Decline to Answer</fullName>
            </value>
            <value>
                <fullName>ASKU</fullName>
                <isActive>false</isActive>
                <label>ASKU</label>
            </value>
            <value>
                <fullName>Intersex</fullName>
                <isActive>false</isActive>
                <label>Intersex</label>
            </value>
            <value>
                <fullName>NA</fullName>
                <isActive>false</isActive>
                <label>NA</label>
            </value>
            <value>
                <fullName>NI</fullName>
                <isActive>false</isActive>
                <label>NI</label>
            </value>
            <value>
                <fullName>Prefer not to disclose</fullName>
                <isActive>false</isActive>
                <label>Prefer not to disclose</label>
            </value>
            <value>
                <fullName>Transgender</fullName>
                <isActive>false</isActive>
                <label>Transgender</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>