force-app/main/default/objects/CMPL123CME__Complaint__c/fields/OLY_Has_Pending_or_Completed_Assessment__c.field-meta.xml
<CustomField>
    <fullName>OLY_Has_Pending_or_Completed_Assessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Pending or Completed Assessment</label>
    <type>Checkbox</type>
</CustomField>