force-app/main/default/objects/CMPL123CME__Complaint__c/fields/OLY_Is_Blocked_from_PTI__c.field-meta.xml
<CustomField>
    <fullName>OLY_Is_Blocked_from_PTI__c</fullName>
    <formula>OR( 
    AND(
        ISPICKVAL(OLY_Customer_Letter_Required__c, &apos;Yes&apos;),
        ISPICKVAL(OLY_Product_Return_Expected__c, &apos;No&apos;)
    ),
    
    OLY_Has_Death_Code__c ,
    NOT(OLY_Has_PTI_Code__c),
    OLY_Has_Non_PTI_Code__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Blocked from PTI</label>
    <type>Checkbox</type>
</CustomField>