force-app/main/default/objects/CMPL123CME__Complaint__c/fields/OLY_Other_Gender__c.field-meta.xml
<CustomField>
    <fullName>OLY_Other_Gender__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>