force-app/main/default/objects/CMPL123CME__Complaint__c/fields/TWD_Sex__c.field-meta.xml
<CustomField>
    <fullName>TWD_Sex__c</fullName>
    <label>zGender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Undifferentiated</fullName>
            </value>
            <value>
                <fullName>Decline to Answer</fullName>
            </value>
            <value>
                <fullName>ASKU</fullName>
            </value>
            <value>
                <fullName>NI</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Intersex</fullName>
                <isActive>false</isActive>
                <label>Intersex</label>
            </value>
            <value>
                <fullName>Not Specified</fullName>
                <isActive>false</isActive>
                <label>Not Specified</label>
            </value>
            <value>
                <fullName>Prefer not to disclose</fullName>
                <isActive>false</isActive>
                <label>Prefer not to disclose</label>
            </value>
            <value>
                <fullName>Transgender</fullName>
                <isActive>false</isActive>
                <label>Transgender</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>