force-app/main/default/objects/CMPL123CME__Complaint__c/fields/zObligated_to_Report_to_USA__c.field-meta.xml
<CustomField>
    <fullName>zObligated_to_Report_to_USA__c</fullName>
    <formula>CMPL123CME__Product__r.OLY_Obligated_to_Report_to_USA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zObligated to Report to USA</label>
    <type>Checkbox</type>
</CustomField>